# sup_probe

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  createsuperuser.py  docker-compose.yml  pyproject.toml
commands/createuser/: createadminrepository.py  registeradmindto.py
migrations/: base.py  env.py
migrations/versions/: 2024_04_15_1900-7821b2ea5fcf_.py  2024_04_16_1208-1d6f8030164b_.py  2024_04_16_1231-5a1729370788_.py  2024_05_05_0704-91b7f3d23403_.py
old/src/: main.py
old/src/api/v1/: __init__.py  email_controller.py  invitation_controller.py  login_controller.py  meet_controller.py  permission_controller.py  role_controller.py  user_controller.py
old/src/app/: __init__.py  exception_handler.py  middleware.py  routers.py
old/src/app/config/: cors_config.py  db_config.py  logging_config.py  pagination_config.py  swagger_config.py
old/src/app/dependencies/: repositories.py  services.py
old/src/domain/auth/: auth_service.py  token_service.py
old/src/domain/email/: email_service.py
old/src/domain/invitation/: invitation_dto.py  invitation_entity.py  invitation_service.py
old/src/domain/login/: login_service.py
old/src/domain/meet/: meet_dto.py  (+1 more)
src/: app.py  main.py  routes.py
src/api/v1/: routes.py
src/apps/auth/: service.py  token_service.py
src/apps/email/: dependends.py  service.py
src/apps/invitation/: dto.py  exceptions.py  models.py  repository.py  service.py
src/apps/user/: dto.py  entity.py  service.py
src/config/: email.py  swagger.py
src/config/database/: engine.py
src/lib/: base_model.py  exceptions.py
(+57 files in other folders)
